Removed margin-left from most of the code after second-container was added, added width of 50% to kayla's section and second-section to make page flow better with spacing, added flex to center anifa's icons, fixed issue with submit button margins and paddings, added one media query to fit normal screen sizes for presentation

--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,7 @@ body {
     height: 100%;
     display: flex;
     flex-direction: row;
-    display: flex;
-    flex-direction: row;
+    justify-content: flex-end;
 }
 
 
@@ -25,18 +24,18 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 50%;
 }
 
 .kayla-container {
     text-align: center;
     margin-bottom: 600px;
-    margin-left: 100px;
 }
 
 .kayla-container p {
     color: white;
     font-weight: 700;
-    font-size: 30px;
+    font-size: 25px;
     margin: 5px 0;
 }
 
@@ -46,12 +45,18 @@ body {
     border-radius: 1em;
     padding: 5px 40px;
     color: white;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 700;
 }
 
 .kayla-container button:hover {
     cursor: pointer;
+}
+
+.second-container {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 }
 
 /* John's style code */
@@ -61,13 +66,6 @@ body {
     flex-direction: column;
     align-items: center;
     margin: auto auto ;
-
-}
-
-.john-container {
-    margin-left: 340px;
-    margin-bottom: 25px;
-    
 }
 
 .input-field {
@@ -96,18 +94,17 @@ body {
 
 #submit {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    width: 260px;
-    height: 70px;
+    align-items: center;
     background-color: blue;
     color: white;
     border: 1px solid lightgrey;
     border-radius: 2em;
     font-size: 25px;
     text-align: center;
-    padding: 5px 20px;
-    margin-left: 225px;
-    margin-top: 80px;
+    padding: 10px 60px;
+    margin-left: 270px;
     
 }
 
@@ -118,13 +115,15 @@ body {
 /* Anifa's Style Code */
 .anifa{
     margin-top: 10px;
-    margin-left: 80px;
+    margin-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .sen{
     margin-bottom: 30px;
-    margin-left: 480px;
-    
 }
 
 .sen h3{
@@ -134,9 +133,11 @@ body {
     
 }
 .icons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 650px;
     height: 100px;
-    margin-left: 280px;
     margin-top: 0px;
 }
 
@@ -157,5 +158,11 @@ body {
 }
 
 
-
-
+/* Media Queries */
+@media (max-width: 1463px) {
+    .second-container {
+        width: 40%;
+        margin-left: 100px;
+        padding-left: 100px;
+    }
+}
